--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -159,6 +159,13 @@ a:visited {
         font-size: 15px;
         font-weight: 600;
         color: #414141;
+        
+        .sidenote {
+            font-weight: 400;
+            font-size: 12px;
+            color: #737373;
+            font-style: italic;
+        }
     }
 
     .input-placeholder{
