--- a/client/one/partials/add_conversion_goal_modal.html
+++ b/client/one/partials/add_conversion_goal_modal.html
@@ -36,7 +36,7 @@
         <div class="form-group" ng-if="showConversionPixelForm()" ng-class="{'has-error': !!errors.goalId}">
             <label for="pixel-slug-select" class="col-xs-4 control-label">
                 Conversion pixel
-                <zem-help-popover content="One of pre-set conversions pixels. You can add additional ones on agency tab of the account." placement="top"></zem-help-popover>
+                <zem-help-popover content="One of pre-set conversions pixels. You can add additional ones on Account tab of the account." placement="top"></zem-help-popover>
             </label>
             <div class="col-xs-4" ng-if="availablePixels.length">
                 <ui-select theme="select2" search-enabled="false" id="pixel-slug-select" class="form-control" ng-model="conversionGoal.goalId">
@@ -49,8 +49,8 @@
             <div class="col-xs-8" ng-if="!availablePixels.length">
                 <p class="form-control-static">
                 Not available. You must
-                <a ng-if="hasPermission('zemauth.account_agency_view')" ng-href="/accounts/{{ account.id }}/agency" target="_self">set up a conversion pixel</a>
-                <span ng-if="!hasPermission('zemauth.account_agency_view')">set up a conversion pixel</span> first.
+                <a ng-if="hasPermission('zemauth.account_account_view')" ng-href="/accounts/{{ account.id }}/account" target="_self">set up a conversion pixel</a>
+                <span ng-if="!hasPermission('zemauth.account_account_view')">set up a conversion pixel</span> first.
                 </p>
             </div>
 
