Fix conversion goal link

--- a/client/one/partials/campaign_settings.html
+++ b/client/one/partials/campaign_settings.html
@@ -85,6 +85,8 @@
     <zem-conversion-goals
         zem-has-permission="hasPermission"
         zem-is-permission-internal="isPermissionInternal"
-        zem-campaign="campaign">
+        zem-campaign="campaign"
+        zem-account="account"
+    >
     </zem-conversion-goals>
 </div>
