past credit bugfix

--- a/client/one/partials/campaign_budget_plus.html
+++ b/client/one/partials/campaign_budget_plus.html
@@ -4,7 +4,7 @@
         <div class="section named-data">
             <div class="name">Available Budget</div>
             <div class="value">{{ budgetTotals.currentAvailable | decimalCurrency:"$":2 }}</div>
-            <div class="name bottomborder">Available Credit</div>
+            <div class="name bottomborder">Unallocated Credit</div>
             <div class="value bottomborder">
                 {{ budgetTotals.currentUnallocated | decimalCurrency:"$":2 }}
             </div>
