--- a/client/one/partials/account_campaigns.html
+++ b/client/one/partials/account_campaigns.html
@@ -16,7 +16,7 @@
                 </button>
                 <div class="loader" ng-show="addCampaignRequestInProgress"></div>
             </div>
-            <div class="button-bar-item export-container">
+            <div ng-if="!hasPermission('zemauth.exports_plus')" class="button-bar-item export-container">
                 <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
@@ -42,8 +42,6 @@
             <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" local-storage-prefix="localStoragePrefix"></zem-custom-table-cols>
 
             <a id="chart-btn" ng-attr-title="{{ chartBtnTitle }}" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
-
-            <div class="clearfix"></div>
         </div>
 
         <alert type="info" class="alert-sync" ng-show="!isSyncRecent">
