--- a/client/one/partials/all_accounts_accounts.html
+++ b/client/one/partials/all_accounts_accounts.html
@@ -13,7 +13,7 @@
 
             <div class="loader" ng-show="requestInProgress"></div>
 
-            <div class="button-bar-item export-container">
+            <div ng-if="!hasPermission('zemauth.exports_plus')" class="button-bar-item export-container">
                 <zem-export
                     start-date="dateRange.startDate"
                     end-date="dateRange.endDate"
@@ -39,8 +39,6 @@
             <zem-custom-table-cols class="pull-right" columns="columns" categories="columnCategories" local-storage-prefix="localStoragePrefix"></zem-custom-table-cols>
 
             <a id="chart-btn" ng-attr-title="{{ chartBtnTitle }}" class="btn btn-default pull-right" ng-click="toggleChart()"><img ng-src="{{ config.static_url }}/one/img/chart.svg"></a>
-
-            <div class="clearfix"></div>
         </div>
 
         <alert type="info" class="alert-sync" ng-show="!isSyncRecent">
