--- a/client/one/partials/account_credit_item_modal.html
+++ b/client/one/partials/account_credit_item_modal.html
@@ -40,7 +40,7 @@
             <div class="col-xs-4">
                 <ui-select theme="select2" id="license-fee-select" class="form-control" ng-model="creditItem.licenseFee" ng-disabled="creditItem.isSigned">
                     <ui-select-match>{{$select.selected | number:2}}%</ui-select-match>
-                    <ui-select-choices repeat="fee in getLicenseFees($select.search) | filter: $select.search">
+                    <ui-select-choices repeat="fee in getLicenseFees($select.search, $creditItem.licenseFee) | filter: $select.search">
                         <span ng-bind-html="fee"></span>%
                     </ui-select-choices>
                 </ui-select>
@@ -67,7 +67,7 @@
                 Custom Notes
             </label>
             <div class="col-xs-4">
-                <textarea id="comment-input" type="text" class="form-control" ng-model="creditItem.comment"></textarea>
+                <textarea id="comment-input" type="text" class="form-control" ng-model="creditItem.comment" maxlength="256"></textarea>
             </div>
             <label ng-repeat="error in errors.comment" class="col-xs-5 control-label error" for="comment">{{ error }}</label>
         </div>
