--- a/client/one/partials/campaign_budget_plus.html
+++ b/client/one/partials/campaign_budget_plus.html
@@ -41,7 +41,7 @@
                     <td>{{ item.licenseFee  }}</td>
                     <td>{{ item.spend | decimalCurrency:"$":2  }}</td>
                     <td>{{ item.available | decimalCurrency:"$":2  }}</td>
-                    <td class="text-row">{{ item.comment }}</td>
+                    <td class="text-row"><span ng-if="!item.comment">N/A</span>{{ item.comment }}</td>
                     <td>
                         <ul class="row-actions">
                             <li ng-click="editBudgetItem(item.id)" ng-if="item.isEditable || item.isUpdatable">edit</li>
