hide datepicker in credit and budget views

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1174,7 +1174,7 @@ div[datepicker] {
     display: inline-block;
     border: 1px solid #666;
     .border-radius(2px);
-    padding: 1px 3px 0px 3px;;
+    padding: 1px 3px 0px 3px;
     margin-left: 5px;
     font-size: 10px;
     line-height: 10px;
