--- a/client/one/partials/campaign_budget_item_modal.html
+++ b/client/one/partials/campaign_budget_item_modal.html
@@ -41,8 +41,7 @@
                             <td>{{ credit.startDate }}</td>
                             <td>{{ credit.endDate }}</td>
                             <td>
-                                <zem-note-popover ng-if="credit.comment" content="{{ credit.comment }}" placement="top"></zem-note-popover>
-                                <span ng-if="!credit.comment">N/A</span>
+                                <zem-note-popover content="{{ credit.comment }}" placement="top"></zem-note-popover>
                             </td>
                         </tr>
                     </tbody>
