Rename account manager, sales rep

--- a/client/one/partials/campaign_agency.html
+++ b/client/one/partials/campaign_agency.html
@@ -2,7 +2,7 @@
     <form id="form-campaign-agency" class="form-horizontal">
         <div class="form-group" ng-class="{'has-error': !!errors.accountManager}">
             <label for="account-manager-select" class="col-xs-3 control-label">
-                Account Manager
+                Campaign Manager
                 <zem-help-popover content="Account manager responsible for the campaign and the communication with the client." placement="top"></zem-help-popover>
             </label>
             <div class="col-xs-3">
