Updated as requested by CS

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -146,6 +146,7 @@ a:visited {
 
         label.control-label {
             color: #c70000;
+            font-weight: normal;
 
             a {
                 color: #c70000;
