Revert "Some fixes @wesselrossing @siluka"

--- a/client/one/partials/account_agency.html
+++ b/client/one/partials/account_agency.html
@@ -14,7 +14,7 @@
 
         <div class="form-group" ng-class="{'has-error': !!errors.defaultAccountManager}">
             <label for="account-manager-select" class="col-xs-2 control-label">
-                Account Manager
+                Default Account Manager
                 <zem-help-popover content="Account manager responsible for the campaign and the communication with the client." placement="top"></zem-help-popover>
             </label>
             <div class="col-xs-3">
@@ -30,7 +30,7 @@
 
         <div class="form-group" ng-class="{'has-error': !!errors.defaultSalesRepresentative}">
             <label for="sales-representative-select" class="col-xs-2 control-label">
-                Sales Representative
+                Default Sales Representative
                 <zem-help-popover content="Sales representative responsible for the campaign and the communication with the client." placement="top"></zem-help-popover>
             </label>
             <div class="col-xs-3">
