--- a/client/one/partials/campaign_ad_groups.html
+++ b/client/one/partials/campaign_ad_groups.html
@@ -7,7 +7,7 @@
             <div ng-if="hasPermission('zemauth.can_see_infobox')" ng-class="{'infobox-container-full': infoboxVisible, 'infobox-container-short': !infoboxVisible}">
                 <zem-infobox header="infoboxHeader" settings="infoboxSettings" link-to="'main.campaigns.settings'" element-id="$state.params.id"></zem-infobox>
             </div>
-        <div>
+        </div>
     </div>
     <div class="section table-ad-group-ads">
         <div class="button-bar">
