bcm admin improvements and date filtering of credits in client

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1905,6 +1905,10 @@ div[datepicker] {
             animation-name: show-updated;
             animation-duration: 2s;
         }
+
+        tr.row-not-selected td {
+            color: #d2d2d2;
+        }
     }
     .scrollable {
         display: block;
