CR: Renamed element-id to state-id

--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -6,7 +6,7 @@
             <div class="infobox-subtitle">{{header.subtitle}}</div>
         </div>
 
-        <a class="btn btn-default pull-right" style="display:inline-block" ng-click="tabClick($event)" zem-in-link="{{ linkTo }}({ id: {{ elementId }} })">
+        <a class="btn btn-default pull-right" style="display:inline-block" ng-click="tabClick($event)" zem-in-link="{{ linkTo }}({ id: {{ stateId }} })">
             <zem-internal-feature ng-if="tab.internal" popover-placement="bottom"></zem-internal-feature>
             Edit
         </a>
