Bugfix: invalid bound var

--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -19,7 +19,7 @@
             ng-if="setting.type == 'setting'"
             label="(setting.name || '&nbsp;')"  
             value="setting.value" 
-            value-description="setting.valueDescription"
+            value-description="setting.description"
             details-label="setting.detailsLabel"
             details-content="setting.detailsContent"
             icon="(setting.icon || '')"
