Remove max_cpc and reuse cpc settings

--- a/client/one/partials/ad_group_settings.html
+++ b/client/one/partials/ad_group_settings.html
@@ -68,6 +68,20 @@
             <label ng-repeat="error in errors.endDate" class="control-label error" for="end-date-input">{{ error }}</label>
         </div>
 
+        <div class="form-group" ng-class="{'has-error': !!errors.cpc}">
+            <label for="cpc-input" class="col-xs-2 control-label">
+                Maximum CPC
+                <zem-help-popover content="Maximum CPC in this ad group." placement="top"></zem-help-popover>
+            </label>
+            <div class="col-xs-2">
+                <div class="input-group">
+                    <span class="input-group-addon">$</span>
+                    <input id="cpc-input" type="text" class="form-control" ng-model="settings.cpc" zem-currency-input>
+                </div>
+            </div>
+            <label ng-repeat="error in errors.cpc" class="control-label error" for="cpc-input">{{ error }}</label>
+        </div>
+
         <div class="form-vertical">
             <div class="form-group" ng-class="{'has-error': !!errors.targetDevices}">
                 <label class="col-xs-2 control-label">
