Increased distance between perf. icon and text

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -769,7 +769,8 @@ div[datepicker] {
 .infobox-setting-icon {
     display: inline-block;
     vertical-align: top;
- }
+    margin-right: 4px;
+}
 
 .infobox-details-link {
     cursor: pointer;
