Added retargeting UI

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -121,12 +121,6 @@ a:visited {
         textarea {
             margin-top: 7px;
         }
-
-        .multiselect-container {
-            input[type="text"] {
-                margin-top: 0;
-            }
-        }
     }
 }
 
@@ -3126,7 +3120,7 @@ zem-submission-status {
     }
 }
 
-.selected-locations {
+.multiselect {
     border: 1px solid #d2d2d2;
     border-radius: 2px;
     box-shadow: none;
@@ -3134,7 +3128,7 @@ zem-submission-status {
     margin-top: 7px;
     margin-bottom: 7px;
 
-    .location-tag {
+    .multiselect-tag {
         cursor: pointer;
         margin-right: 5px;
         margin-top: 5px;
@@ -3146,13 +3140,13 @@ zem-submission-status {
         font-size: 13px;
         border: 1px solid @add-filter-color;
 
-        .location-dma {
+        .multiselect-tag-label {
             padding: 6px 6px 5px 6px;
             border-right: 1px solid @add-filter-color;
             margin: 0;
         }
 
-        .location-name {
+        .multiselect-tag-name {
             padding: 6px 27px 6px 6px;
             margin: 0;
             img.remove {
@@ -3195,6 +3189,14 @@ zem-submission-status {
 
 .select2-locations .select2-no-results {
     font-size: 12px;
+}
+
+.ui-select-container .ui-select-dropdown .ui-select-choices-row .select2-result-label {
+    padding-left: 20px;
+
+    .archived {
+        color: #d9d9d9;
+    }
 }
 
 .tutorial.popover {
