--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -11,6 +11,7 @@
 @border-color: #e3e3e3;
 
 @updated-color: #dff0d8;
+@canceled-color: #414141;
 
 @infobox-black: #414141;
 @infobox-gray: #aaaaaa;
@@ -18,6 +19,12 @@
 @keyframes show-updated {
     0% { background-color: @updated-color; }
     50% { background-color: @updated-color; }
+    100% { background-color: white; }
+}
+
+@keyframes show-canceled {
+    0% { background-color: @canceled-color; }
+    50% { background-color: @canceled-color; }
     100% { background-color: white; }
 }
 
@@ -1874,6 +1881,7 @@ div[datepicker] {
                 margin: 0;
                 list-style-type: none;
                 li {
+                    display: inline-block;
                     padding: 0;
                     margin: 0;
                     color: #2fa8c7;
@@ -1896,12 +1904,21 @@ div[datepicker] {
             width: 100%;
         }
 
+        tr.row-canceled td, tr.row-canceled td i {
+            text-decoration: line-through;
+        }
+
         tr.row-updated {
             animation-name: show-updated;
             animation-duration: 2s;
         }
 
-        tr.row-not-selected td {
+        tr.row-updated-canceled {
+            animation-name: show-canceled;
+            animation-duration: 2s;
+        }
+
+        tr.row-not-selected td, tr.row-not-selected td i {
             color: #d2d2d2;
         }
     }
