Added navigation and graph hiding buttons to template

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -697,6 +697,28 @@ div[datepicker] {
 
 .infobox-button {
     margin-right: 5px;
+    width: 34px;
+    height: 34px;
+}
+
+.navigation-button {
+    margin-right: 5px;
+    width: 34px;
+    height: 34px;
+}
+
+.graph-button {
+    margin-right: 5px;
+    width: 34px;
+    height: 34px;
+    padding: 0px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.graph-button-image {
+    width: 28px;
+    height: 28px;
 }
 
 .infobox-background {
